--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettify": "npx prettier --write --ignore-path .gitignore \"**/*.{js,ts,vue,json,md}\""
   },
   "devDependencies": {
+    "@nuxt/devtools": "^1.0.4",
     "@tauri-apps/cli": "^1.3.1",
     "@types/node": "^18",
     "nuxt": "^3.5.2",
