--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue-audio-visual": "^3.0.6",
     "vue-core-video-player": "^0.2.0",
     "vue3-canvas-video-player": "^1.2.3",
-    "vuetify": "^3.1.3"
+    "vuetify": "^3.1.3",
+    "vuetify3-audio-player": "^1.1.0"
   },
   "overrides": {
     "vue": "^3.2.47"
