--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "vitest",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -10,10 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.6.3",
+    "@nuxt/test-utils": "^3.15.1",
     "@tauri-apps/cli": "^2.1.0",
     "@types/node": "^22",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.11.7",
     "nuxt": "^3.14.1592",
-    "prettier": "3.4.2"
+    "playwright-core": "^1.49.1",
+    "prettier": "3.4.2",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "^8.4.18",
