--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia-logger-nuxt": "^1.0.3",
     "sass": "^1.83.4",
     "vee-validate": "^4.15.0",
+    "vue-instagram": "^3.0.0",
     "vuetify": "^3.7.8"
   },
   "overrides": {
